# platform

./: .dockerignore  .gitignore  .gitmodules  Cargo.toml  Dockerfile  README.md  docker-compose.yml  validator-compose.json  validator-cvm-docker-compose.yml  validator-docker-compose.yml
bins/cli/: Cargo.toml  EXAMPLES.md  README.md
bins/cli/src/: challenge_install.rs  dynamic_values.rs  main.rs
bins/validator/: Cargo.toml
bins/validator/src/: challenge_manager.rs  challenge_ws.rs  config.rs  cvm_quota.rs  docker_client.rs  dstack_provisioner.rs  env_prompt.rs  epoch_manager.rs  executor.rs  hotkey.rs  http_server.rs  job_manager.rs  job_vm_manager.rs  main.rs  network_proxy.rs  platform_verifier.rs  secure_message.rs  vmm_client.rs
crates/api_client/: Cargo.toml
crates/api_client/src/: client.rs  error.rs  lib.rs  platform_client.rs  types.rs
crates/attest_client/: Cargo.toml
crates/attest_client/src/: client.rs  dstack_client.rs  lib.rs  types.rs
crates/chain/: Cargo.toml
crates/chain/src/: bittensor_client.rs  block_sync.rs  blockchain_monitor.rs  blockchain_monitor_metrics.rs  client.rs  commit_weights.rs  error.rs  hotkey_mapper.rs  lib.rs  mechanism_weights.rs  subtensor_client.rs  types.rs  weights.rs
crates/chain/src/commit/: mod.rs
crates/chain/src/mechanism/: mod.rs
crates/chain/src/weights/: mod.rs  submission.rs  submission_temp.rs  validator.rs
crates/challenge_spec/: Cargo.toml
crates/challenge_spec/src/: challenge.rs  harness.rs  lib.rs  runtime.rs  submission.rs  validation.rs
crates/cli-commands/: Cargo.toml
crates/cli-commands/src/: dynamic_values.rs  lib.rs
crates/cli-commands/src/challenge/: install.rs  mod.rs
crates/dynamic_values/: Cargo.toml
crates/dynamic_values/src/: lib.rs
crates/engine/: Cargo.toml
crates/engine/src/: adapter.rs  evaluator.rs  lib.rs  metrics.rs  sandbox.rs  scoring.rs
crates/executor/: ATTESTATION.md  Cargo.toml
crates/executor/src/: dstack_executor.rs  guest_agent_client.rs  lib.rs  standard_executor.rs  trusted_executor.rs  vmm_client.rs
crates/executor/src/dstack/: client.rs  config.rs  executor.rs  mod.rs  policy.rs
crates/validator-challenge-manager/: Cargo.toml
crates/validator-challenge-manager/src/: env.rs  instance.rs  lib.rs  manager.rs  probe.rs  provision.rs  reconcile.rs  utils.rs
crates/validator-core/: Cargo.toml
crates/validator-core/src/: types.rs
crates/validator-docker/: Cargo.toml
crates/validator-docker/src/: client.rs  config.rs  lib.rs
crates/validator-epoch-manager/: Cargo.toml
crates/validator-epoch-manager/src/: config.rs  lib.rs  manager.rs  types.rs
crates/validator-http-server/: Cargo.toml
crates/validator-http-server/src/: attestation.rs  handlers.rs  lib.rs  middleware.rs  routes.rs  server.rs  types.rs
crates/validator-quota/: Cargo.toml
crates/validator-quota/src/: lib.rs  manager.rs  types.rs
crates/validator-vmm/: Cargo.toml
crates/validator-vmm/src/: client.rs  lib.rs  types.rs
crates/validator-websocket/: Cargo.toml
crates/validator-websocket/src/: client.rs  crypto.rs  lib.rs  verification.rs
docs/: api-reference.md  architecture.md  chain-integration.md  cvm-setup.md  development.md  getting-started.md  launching-validator.md  security.md  troubleshooting.md  usage.md
tests/: security_validation_tests.rs
tests/integration/: job_execution_tests.rs  test_cvm_provisioning.rs  test_job_execution_end_to_end.rs  test_security_and_error_handling.rs  validator_lifecycle_tests.rs
tests/mocks/: mock_platform_api.rs  mock_tdx.rs  mock_vmm.rs  mod.rs
tests/security/: test_auth_bypass.rs
tests/unit/: cvm_quota_tests.rs  job_manager_tests.rs  mod.rs  platform_verifier_tests.rs  test_concurrency.rs  test_error_handling.rs  test_timeouts.rs  validator_ws_tests.rs
