[workspace]
members = [
    "crates/api_client",
    "crates/chain",
    "crates/challenge_spec",
    "crates/dynamic_values",
    "crates/executor",
    "bins/validator",
    "bins/cli",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Platform Team"]
license = "MIT"
homepage = "https://platform.network"
repository = "https://github.com/platform-network/platform-engine"

[workspace.dependencies]
# Internal dependencies
platform-engine-api-client = { path = "crates/api_client" }
platform-engine-chain = { path = "crates/chain" }
platform-engine-challenge-spec = { path = "crates/challenge_spec" }
platform-engine-dynamic-values = { path = "crates/dynamic_values" }
platform-engine-executor = { path = "crates/executor" }

# Core dependencies
anyhow = "1.0"
tokio = { version = "1.48", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.18", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2.0"

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

# Cryptography
ring = "0.17"
sha2 = "0.10"
aes-gcm = "0.10"
x25519-dalek = "2.0"


# SEV-SNP
sev-snp-utils = "1.3"

# Substrate/Bittensor
bittensor-rs = { git = "https://github.com/CortexLM/bittensor-rs" }
subxt = "0.44"
sp-core = "38.1"
sp-runtime = "44.0"
bip39 = "2.0"

# Async runtime
futures = "0.3"

# Configuration
config = "0.15"
toml = "0.9"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Metrics
metrics = "0.24"

# File system
walkdir = "2.5"
tempfile = "3.23"

# Compression
flate2 = "1.1"
tar = "0.4"

# Process execution
which = "8.0"

# Network
url = "2.5"

# Hex encoding
hex = "0.4"
base64 = "0.22"

# Logging
env_logger = "0.11"

# Serialization
bincode = "2.0"

# Time
humantime = "2.3"

# Collections
indexmap = "2.12"

# Async utilities
async-trait = "0.1"

# Database
rusqlite = "0.32"
tokio-rusqlite = "0.2"

# Dstack integration
dstack-types = { git = "https://github.com/Dstack-TEE/dstack", package = "dstack-types" }
dstack-guest-agent-rpc = { git = "https://github.com/Dstack-TEE/dstack", package = "dstack-guest-agent-rpc" }
dstack-vmm-rpc = { git = "https://github.com/Dstack-TEE/dstack", package = "dstack-vmm-rpc" }
dstack-sdk = { git = "https://github.com/Dstack-TEE/dstack", package = "dstack-sdk" }
dstack-sdk-types = { git = "https://github.com/Dstack-TEE/dstack", package = "dstack-sdk-types" }

[profile.release]
panic = "abort"
lto = true
codegen-units = 1
