[package]
name = "platform-validator"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[[bin]]
name = "validator"
path = "src/main.rs"

[dependencies]
# Internal dependencies
platform-engine-api-client = { workspace = true }
platform-engine-challenge-spec = { workspace = true }
platform-engine-dynamic-values = { workspace = true }
platform-engine-executor = { workspace = true }
platform-engine-chain = { workspace = true }

# Dstack SDK
dstack-sdk = { workspace = true }

# Core dependencies
anyhow = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Async utilities
async-trait = { workspace = true }

# HTTP server
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }

# HTTP client
reqwest = { workspace = true }
url = { workspace = true }
futures-util = "0.3"
tokio-tungstenite = { version = "0.23", features = ["native-tls"] }

# Cryptography
ed25519-dalek = "2.1"
sha2 = "0.10"
hex = "0.4"
rand = "0.8"
base64 = "0.22"
rcgen = "0.12"
pem = "3.0"
openssl = "0.10"
x25519-dalek = "2.0"
chacha20poly1305 = "0.10"
hkdf = "0.12"
rand_core = "0.6"
aead = "0.5"

# TDX Attestation
dcap-qvl = "0.3"

# Substrate/Bittensor
sp-core = { workspace = true }
sp-runtime = { workspace = true }
bip39 = { workspace = true }

# Time/Date
chrono = { workspace = true }
uuid = { workspace = true }
serde_yaml = "0.9"
