[package]
name = "platform-engine-chain"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
# Internal dependencies
platform-engine-challenge-spec = { workspace = true }

# Core dependencies
anyhow = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }

# Substrate/Bittensor
subxt = { workspace = true }
sp-core = "^38"
sp-runtime = "^44"

# Async runtime
futures = { workspace = true }
async-trait = { workspace = true }

# Collections
indexmap = { workspace = true }

# Network
url = { workspace = true }
rand = { version = "0.9.2", features = ["std_rng"] }
hex = "0.4"

# Bittensor Rust SDK for commit_weights/reveal_weights
bittensor-rs = { git = "https://github.com/PlatformNetwork/bittensor-rs" }
