[package]
name = "platform-engine-engine"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
# Internal dependencies
platform-engine-challenge-spec = { workspace = true }
platform-engine-executor = { workspace = true }

# Core dependencies
anyhow = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }

# Async runtime
futures = { workspace = true }
async-trait = { workspace = true }

# Collections
indexmap = { workspace = true }


# Serialization
bincode = { workspace = true }

# Time
humantime = { workspace = true }

# File system
walkdir = { workspace = true }
tempfile = { workspace = true }

# Process execution
which = { workspace = true }

# Metrics
metrics = { workspace = true }
