[package]
name = "platform-engine-executor"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
# Internal dependencies
platform-engine-challenge-spec = { workspace = true }

# Core dependencies
anyhow = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }

# Async runtime
futures = { workspace = true }
async-trait = { workspace = true }

# Cryptography
ring = { workspace = true }
sha2 = { workspace = true }
aes-gcm = { workspace = true }

# Dstack integration only

# Dstack integration
dstack-types = { workspace = true }
dstack-guest-agent-rpc = { workspace = true }
dstack-vmm-rpc = { workspace = true }

# Process execution
which = { workspace = true }

# File system
walkdir = { workspace = true }
tempfile = { workspace = true }

# Network
url = { workspace = true }

# Serialization
bincode = { workspace = true }

# Time
humantime = { workspace = true }

# Collections
indexmap = { workspace = true }

# Random number generation
rand = "0.9"

# HTTP client
reqwest = { workspace = true }

# Hex encoding
hex = { workspace = true }
