[package]
name = "platform-validator-http-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
# Internal dependencies
platform-engine-dynamic-values = { workspace = true }
platform-validator-core = { workspace = true }
platform-validator-challenge-manager = { workspace = true }

# Core dependencies
anyhow = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
base64 = { workspace = true }
ed25519-dalek = "2.1"
sha2 = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true }
uuid = { workspace = true }
hex = { workspace = true }
rand = "0.8"
rand_core = "0.6"
hkdf = "0.12"
x25519-dalek = "2.0"
chacha20poly1305 = "0.10"
dcap-qvl = { git = "https://github.com/Phala-Network/dcap-qvl.git", features = ["default", "report"] }
async-trait = { workspace = true }

